--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/joshhedstrom/driverLoggingApp#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^4.16.3",
     "mysql": "^2.15.0",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
