--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "connect-flash": "^0.1.1",
     "express": "^4.16.3",
     "mysql": "^2.15.0",
+    "mysql2": "^1.5.3",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^4.37.10"
   }
 }
